# revolut-x-trader

./: .gitignore  Cargo.toml  README.md
src/: api.rs  auth.rs  cli.rs  main.rs  state.rs
