[package]
name = "revolut-trading"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ctrlc = "3"
